--- a/src/SearchService/appsettings.Development.json
+++ b/src/SearchService/appsettings.Development.json
@@ -8,5 +8,9 @@
   "ConnectionStrings": {
     "MongoDbConnection":"mongodb://root:mongopw@localhost"
   },
-  "AuctionServiceUrl":"http://localhost:7001"
+  "AuctionServiceUrl":"http://localhost:7001",
+  
+  "RabbitMq":{
+    "Host":"localhost"
+  }
 }
