adding the client-side authentication and fixing the local address docker issue

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,11 @@
             "request": "attach",
             "platform": "netCore",
             "sourceFileMap": {
-                "/app": "${workspaceFolder}"
+                "/src": "${workspaceFolder}"
             }
         },
+ 
+
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
