--- a/front-end/web-app/package.json
+++ b/front-end/web-app/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.18.0",
     "flowbite-react": "^0.7.2",
     "next": "14.1.0",
+    "next-auth": "^4.24.5",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
