--- a/front-end/web-app/package.json
+++ b/front-end/web-app/package.json
@@ -10,20 +10,26 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.18.0",
+    "@uploadthing/react": "^6.2.2",
     "flowbite-react": "^0.7.2",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "uploadthing": "^6.3.3",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^4.19.5",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.6.1",
