adding bidding service and grpc for sync communication

--- a/src/BiddingService/DockerFile
+++ b/src/BiddingService/DockerFile
@@ -10,7 +10,6 @@ COPY AutoBidHub.sln  AutoBidHub.sln
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/BiddingService/BiddingService.csproj src/BiddingService/BiddingService.csproj
-
 COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
@@ -21,10 +20,10 @@ RUN dotnet restore AutoBidHub.sln
 
 #copy the app folders over
 
-COPY src/GatewayService src/GatewayService
+COPY src/BiddingService src/BiddingService
 COPY src/Contracts src/Contracts
 
-WORKDIR /app/src/GatewayService
+WORKDIR /app/src/BiddingService
 RUN dotnet publish -c Release -o /app/src/out
 
 # build runtime image
@@ -32,4 +31,4 @@ RUN dotnet publish -c Release -o /app/src/out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet","GatewayService.dll" ]
+ENTRYPOINT [ "dotnet","BiddingService.dll" ]
