adding signalR for notification Service

--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ClientApp":"http://localhost:3000",
   "AllowedHosts": "*",
   "ReverseProxy": {
     "Routes": {
@@ -69,6 +70,14 @@
             "PathPattern": "api/bids/{**catch-all}"
           }
         ]
+      },
+      "notifications": {
+        "CorsPolicy":"customPolicy",
+        "ClusterId": "notifications",
+        "Match": {
+          "Path": "/notifications/{**catch-all}"
+        }
+       
       }
     }
   }
