--- a/src/NotificationService/DockerFile
+++ b/src/NotificationService/DockerFile
@@ -1,28 +1,35 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 as build
-WORKDIR /app
-EXPOSE 80
 
-# copy all .csproj files and restore as distinct layers.   Use of the same COPY command
-# for every dockerfile in the project to take advantage of docker caching
-COPY AutoBidHub.sln AutoBidHub.sln
+WORKDIR /app
+EXPOSE 8080
+
+#copy all .csproj files and restore as distinct layers. Use of the same copy
+#commmands for every dockerfile in the project to take advantage of docker cashing
+
+COPY AutoBidHub.sln  AutoBidHub.sln
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/BiddingService/BiddingService.csproj src/BiddingService/BiddingService.csproj
 COPY src/NotificationService/NotificationService.csproj src/NotificationService/NotificationService.csproj
+COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
 COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
-COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 
-# Restore package deps
+#restore the package deps
+
 RUN dotnet restore AutoBidHub.sln
 
-# Copy the app folders over
-COPY src/IdentityService src/IdentityService
-WORKDIR /app/src/IdentityService
+#copy the app folders over
+
+COPY src/NotificationService src/NotificationService
+COPY src/Contracts src/Contracts
+
+WORKDIR /app/src/NotificationService
 RUN dotnet publish -c Release -o /app/src/out
 
-# Build runtime image
+# build runtime image
+
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT [ "dotnet", "IdentityService.dll" ]
+ENTRYPOINT [ "dotnet","NotificationService.dll" ]
